@@ -24,6 +24,9 @@ endif
 if WITH_ELF
 nobase_include_HEADERS += kernaux/elf.h
 endif
+if WITH_FILE
+nobase_include_HEADERS += kernaux/file.h
+endif
 if WITH_FRAMEBUFFER
 nobase_include_HEADERS += kernaux/framebuffer.h
 endif
