@@ -8,6 +8,7 @@
 @comment_line_cmdline@#include <kernaux/cmdline.h>
 @comment_line_console@#include <kernaux/console.h>
 @comment_line_elf@#include <kernaux/elf.h>
+@comment_line_file@#include <kernaux/file.h>
 @comment_line_framebuffer@#include <kernaux/framebuffer.h>
 @comment_line_mbr@#include <kernaux/mbr.h>
 @comment_line_multiboot2@#include <kernaux/multiboot2.h>
