@@ -1,0 +1,14 @@
+#ifndef KERNAUX_INCLUDED_FILE
+#define KERNAUX_INCLUDED_FILE
+
+#ifdef __cplusplus
+extern "C" {
+#endif
+
+typedef void (*KernAux_File_Out)(char c, void *arg);
+
+#ifdef __cplusplus
+}
+#endif
+
+#endif
