@@ -2,6 +2,7 @@
 
 	* include/kernaux/libc.h: Has been split into separate headers
 	* include/kernaux/print.h: Functions "[v]printf" renamed to "[v]fprintf"
+	* include/kernaux/file.h: Added
 
 2022-06-06  Alex Kotov  <kotovalexarian@gmail.com>
 
